css/style.css
/*
    student:    Reginald McPherson
    modified:   02 Oct, 2021
    course:     DGL-203
    instructor: Megan Wilson

    file:       style.css

COLOR PALETTE
------------------------------------
#665f46     - Ebony
#FFFFFF     - White
#d9d9d9     - Gainsboro
#a39358     - Metalic Sunburst
#343E63     - Space Cadet
*/



:root {
    box-sizing: border-box;
    --navbar-bg-color: #343434;
    --header-bg-color: #665f46;
    --projects-bg-color:#FFFFFF;
    --experience-bg-color:#D9D9D9;
    --education-bg-color:#A39358;
    --footer-bg-color:#343E63;
}

*, *::before, *::after {
  box-sizing:inherit;
}




/* Global Styles
--------------------------------------------*/

body {
    color: #343434;
    margin: 0;
    padding: 0;
    font-family: 'Quicksand', sans-serif;
    font-size: 15px;
    line-height: 1.5;
}
h1 {
    font-size: 100px;
    line-height: 1;
}
h2 {
    font-size: 45px;
}
h1, h2 {
    font-family: 'Permanent Marker', cursive;
    font-weight: 400;
    margin: 0;
}

h3 {
    margin-bottom: 0;
}
.item-details h3 + p {
    font-style: italic;
}
.item-details h3 ~ p {
    margin: 0;
}
img {
    width: 300px;
}
a {
    color: #FFE66D;

}
a:hover {
    text-decoration: none;
}

.content-wrap {
    max-width: 800px;
    width: 85%;
    margin: 0 auto;
    padding: 60px 0;
}

.divider > section {
    border-bottom: 1px dashed black;
}

.divider > section:last-of-type {
    border-bottom: none;
}

/* Navbar
I referenced examples on w3schools for the nav bar
-------------------------------------------------*/
.navbar {
    background-color: var(--navbar-bg-color);
    overflow: hidden;
}

.navbar a {
    padding: 20px;
    text-align: center;
    font-size: 20px;
    text-decoration: none;
    color: white;
    font-family: 'Quicksand', sans-serif;
}

.navbar a:hover {
    background-color: #A39358;
    color:#2f3061;
}

.navbar a.active {
    background-color: #665f46;
    color: white;
}

/* Profile
--------------------------------------------*/
header {
    background: var(--header-bg-color);
    color: #F7FFF7;
}


/* Projects
--------------------------------------------*/
.projects {
    background: var(--projects-bg-color);
}
.projects a {
    color: #2f3061;
}
.projects .btn {
    color: #F7FFF7;
    background: #2f3061;
    text-decoration: none;
    padding: 8px;
    border-radius: 4px;
    display: inline-block;
}
.projects .btn:hover {
    background: rgba(47,48,97, 80%);
}

.project-item {
    overflow: hidden;
    border-bottom: 1px dashed black;
    padding: 25px 0;
}

.project-item h3 {
    margin-top: 0;
}


/* Work Experience
--------------------------------------------*/
.work-experience {
    background: var(--experience-bg-color);
    background-image: url('/images/tire_cropped.png');
    background-size: cover;
    background-position: bottom left;
    padding-bottom: 100px;
}



/* Education
--------------------------------------------*/

.education {
    background-color: var(--education-bg-color);

}

.education p {
    width: 60%;
}


/* Contact Info
--------------------------------------------*/
footer {
    background: var(--footer-bg-color);
    color: #F7FFF7;
}
.contact-list {
    list-style-type: none;
    padding: 0px;
}

.contact-list a {
    padding: 15px;
    display: inline-block;
}

/* Responsive
--------------------------------------------*/
@media screen and (min-width: 750px) {
    header, footer {
        text-align: center;
    }
    .project-item img{
        float: left;
        margin-right: 20px;
    }
    .job-item {
        display: grid;
        grid-template-columns: 1fr 2fr;
        column-gap: 20px;
    }
    .contact-list {
        display: flex;
        justify-content:center;
    }
}

@media screen and (max-width: 749px) {
    h1 {
        font-size: 75px;
        line-height: 0.9;
        margin-bottom: 20px;
    }
    h2 {
        line-height: 1;
    }
    .navbar a {
        display: block;
    }
    .contact-list a {
        padding: 5px;
    }
}

/* Modal
---------------------------------------------*/

/* semi-transparent background that darkens the background area while modal is visible. */
.modal_container {
    width: 100%;
    height: 100vh;
    background-color: rgba(0, 0, 0, .85);

    position: absolute;
    top: 0;
    left: 0;
    z-index: 10;
    opacity: 0;
    visibility: hidden;

}

.modal_content {
    color: #665f46;
    width: 45%;
    height: 45%;
    background-color: white;

    position:absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 2em;
    border-radius: 2em;
    opacity: 0;
    visibility: hidden;
}

.modal_heading {
    color: red;
    margin-bottom: 1em;
}

.modal_paragraph {
    line-height: 1.5em;
}

.modal_open {
    display: inline-block;
    color: blue;
    margin: 2em;
}


.modal_close {
    font-weight: bolder;
    color:#665f46;
    text-decoration: none;
    position:absolute;
    font-size: 2em;
    top: .5em;
    right: 1em;
}

